--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-archer": "^4.4.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-leader-line": "^1.0.5",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
